--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="static/manifest.json">
+    <link rel="apple-touch-icon" href="static/img/icon-192px.png">
     <title>React App</title>
 </head>
 <body>
