--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="static/manifest.json">
     <link rel="apple-touch-icon" href="static/img/icon-192px.png">
-    <title>React App</title>
+    <title>SongScaler</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
