--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -6,6 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="static/manifest.json">
     <link rel="apple-touch-icon" href="static/img/icon-192px.png">
+    <link rel="icon" href="static/img/circle-resized-192.png" type="image/x-icon" />
     <title>SongScaler</title>
 </head>
 <body>
