--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -8,6 +8,7 @@
     <link rel="manifest" href="static/manifest.json">
     <link rel="apple-touch-icon" href="static/img/icon-192px.png">
     <link rel="icon" href="static/img/circle-resized-192.png" type="image/x-icon" />
+    <script data-ad-client="ca-pub-1039853495049571" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <title>SongScaler</title>
 </head>
 <body>
