--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <script data-ad-client="ca-pub-1039853495049571" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <title>React App</title>
 </head>
 <body>
